yaml/CodeLlama-7B/codellama-frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codellama-frontend-ingress
  namespace: codellama
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: ai.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codellama-frontend-service
            port:
              number: 80
